Fix wrap making text white
Makes text with class white-box not blend in.

--- a/css/default.css
+++ b/css/default.css
@@ -78,7 +78,6 @@
 
 .wrap{
   text-align: center;
-  color:white
 }
 
 .Lname{
